# AghenticMinds

./: .gitignore  README.md  advanced_example.py  calculate_savings.py  calculate_scale_savings.py  compare_models.py  example.py  pyproject.toml  quick_start.py  test.py  tutorial_app.py
.github/workflows/: publish.yml
agenticminds/: router.py  session.py
debug-cache/: user_123_debug.json
expertflow/: cli.py  memory.py  session.py
expertflow/llm/: gemini.py
switchboard_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_agents.py  test_basic.py
